<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/bakgrund"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/settings_menu"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        />

    <com.cengalabs.flatui.views.FlatButton
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mute_music"
        android:id="@+id/mutemusic"
        flatui:fl_theme="@array/orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />

    <com.cengalabs.flatui.views.FlatButton
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mute_sound"
        android:id="@+id/mute_sound"
        flatui:fl_theme="@array/orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        />

    <com.cengalabs.flatui.views.FlatButton
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:id="@+id/theme"
        flatui:fl_theme="@array/orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        />

    <com.cengalabs.flatui.views.FlatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/butMenu"
        android:id="@+id/button3"
        flatui:fl_theme="@array/orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:onClick="openMenuActivity"
        />


</LinearLayout>
