<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/bakgrund"
    android:orientation="vertical"
    android:weightSum="1"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/molklogga4"
        android:layout_weight="0.42"
        />

    <com.cengalabs.flatui.views.FlatButton
        android:orientation="vertical"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:id="@+id/button1"
        flatui:fl_theme="@array/orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="openPlayActivity"/>

    <com.cengalabs.flatui.views.FlatButton
        android:orientation="vertical"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/highscore_button"
        android:id="@+id/button2"
        flatui:fl_theme="@array/orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:onClick="openHighActivity"/>

    <com.cengalabs.flatui.views.FlatButton
        android:orientation="vertical"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        android:id="@+id/button3"
        flatui:fl_theme="@array/orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:onClick="openSetActivity"/>

    <com.cengalabs.flatui.views.FlatButton
        android:orientation="vertical"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:id="@+id/button4"
        flatui:fl_theme="@array/orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:onClick="openAboutActivity"/>


</LinearLayout>
