<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bakgrund"
    android:weightSum="1"
    android:orientation="vertical"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/about_menu"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        />

    <com.cengalabs.flatui.views.FlatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/butAboutUs"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        flatui:fl_theme="@array/orange"


        />

    <com.cengalabs.flatui.views.FlatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/butInstructions"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        flatui:fl_theme="@array/orange"
        />

    <com.cengalabs.flatui.views.FlatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/butMenu"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:onClick="openMenuActivity"
        flatui:fl_theme="@array/orange"
        />
</LinearLayout>
